--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,8 @@ description: Hopefully useful information about me
 
 # List of links in the navigation bar
 navbar-links:
-  About Me: "aboutme"
+  About: "aboutme"
+  Projects: "projects"
   Resources:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
@@ -28,7 +29,7 @@ navbar-links:
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+avatar: "/img/headshot.png"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
@@ -70,10 +71,10 @@ social-network-links:
   rss: true
   email: "max.hawkins65@gmail.com"
 #  facebook: deanattali
-  github: github.com/max-Hawkins
+  github: max-Hawkins
 #  twitter: daattali
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: maxh
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
