--- a/_config.yml
+++ b/_config.yml
@@ -20,13 +20,12 @@ description: Hopefully useful information about me
 
 # List of links in the navigation bar
 navbar-links:
-  About: "aboutme"
+  About: "http://maxhawkins.info"
     - Resume: "http://maxhawkins.info/resume/"
   Projects: "projects"
-  Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-  Author's home: "http://maxhawkins.info"
+  Websites:
+    - Naturally Fundamental - Interactive Science Education: "https://naturallyfundamental.com/"
+    - The Climate Gap - Travel and Tech: "http://theclimategap.com/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
