--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- General options --- #
 
 # Name of website
-title: Max Hawkins
+title: "Max Hawkins"
 
 # Short description of your site
-description: Hopefully useful information about me
+description: "Hopefully useful information about me"
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
