--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: "Hopefully useful information about me"
 
 # List of links in the navigation bar
 navbar-links:
-  About: ""
+  About:
     - Resume: "resume"
   Projects: "projects"
   Websites:
