--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,8 @@ title: "Max Hawkins"
 # List of links in the navigation bar
 navbar-links:
   About: "http://maxhawkins.info/"
-  Resume: "resume"
+  Resume: "files/Resume_MaxHawkins_10-2018.pdf"
   Projects: "projects"
-  My Websites:
-    - Naturally Fundamental - Interactive Science Education: "https://naturallyfundamental.com/"
-    - The Climate Gap - Travel and Tech: "http://theclimategap.com/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
