--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: "Max Hawkins"
 
 # Short description of your site
-#description: "Hopefully useful information about me"
+description: ""
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
