--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description: ""
 # List of links in the navigation bar
 navbar-links:
   About: "http://maxhawkins.info/"
-  Resume: "files/Resume_MaxHawkins.pdf"
+  Resume: "Resume_MaxHawkins.pdf"
   Projects: "projects"
 
 # Image to show in the navigation bar - image must be a square (width = height)
